@@ -20,4 +20,6 @@ public interface Rendering {
 	void drawMod();
 	
 	void drawDoorTop() throws SlickException;
+	
+	void drawMainProj();
 }
